--- a/html.html
+++ b/html.html
@@ -26,7 +26,6 @@
 </head>
 
 <body>
-  <button href="customize.html"></button>
   <!-- navbar section --> <nav class="navbar navbar-expand-xl px-5 fixed-top bg-white m-0" style="z-index: 1;">
     <div class="container-fluid">
       <a class="navbar-brand fs-2 fw-bold" href="#">
@@ -66,6 +65,7 @@
     <div class="list-buttom">
       <p class="pricecounter text-center p-0 m-0 pt-2 pb-2 fw-bold" style="background-color: red; color: white;">TOTAL : 0 DH</p>
   </div>
+  <a href="./devis.html" class="btn boton-rent-custom px-5 mt-3 w-100" target="_blank" style="text-decoration:none;">RENT NOW</a>
     
     <ul class="list-content">
 
@@ -155,7 +155,6 @@
         <i class="bi bi-grid grid-toggle"></i>
         <i class="bi bi-list-task list-toggle"></i>
       </div>
-
 
 
       <div id="cardsParent"  class="cards row d-flex justify-content-center gap-4  w-100 px-4    py-5">
