--- a/ht,l22.html
+++ b/ht,l22.html
@@ -20,3 +20,6 @@
         <h2 id="prix"> ${panelItems[index].price}</h2>
     </div>
 </div>
+
+
+<a href="./assets/images/CARS/ToyotaCamry.png"></a>
