--- a/customize.html
+++ b/customize.html
@@ -25,7 +25,7 @@
 
 </head>
 
-<body>
+<body style="">
    <!-- navbar section --> <nav class="navbar navbar-expand-xl px-5 fixed-top bg-white m-0" style="z-index: 1;">
     <div class="container-fluid">
       <a class="navbar-brand fs-2 fw-bold" href="#">
@@ -63,15 +63,20 @@
     <section class="container-fluid pt-5">
       <div class="details-section row px-0 mx-0">
         <div class="images col-md-6">
-          <div class="main-img text-light p-5">
-            <div class="img-desc pb-3">
-              <h1>Fuel Your Passion Discover</h1>
+          <div class="main-img text-light p-5 bg-dark" style="box-shadow: rgb(38, 57, 77) 1px 2px 10px 1px;">
+            <div class="img-desc pb-3 w-100">
+              <h1 style="color: red;">Fuel Your Passion Discover</h1>
               <p class="car-desc">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Iure quaerat voluptatem est optio vero. Ipsum </p>  
-            </div>
-            <img class="w-100" src="./assets/images/bg/details.png" alt="">
+            </div> 
+            <img class="w-100" alt="">
           </div>
           <div class="col-md-6 gap-2 my-2 d-flex w-100">
-            <div class="w-100 h-75"><img class="w-100 h-100x" src="./assets/images/bg/details3.png" alt=""></div>
+            <div class="w-100  main-img d-flex align-items-center" style="background: #000000;  /* fallback for old browsers */
+            background: -webkit-linear-gradient(to right, #e74c3c, #000000);  /* Chrome 10-25, Safari 5.1-6 */
+            background: linear-gradient(to right, #e74c3c, #000000); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+            ">
+              <img class="w-100 smallimage" " src="./assets/images/bg/details3.png" alt="">
+            </div>
             <div class="w-100 h-75"><img class="w-100 h-100x" src="./assets/images/bg/details1.png" alt=""></div>
             <div class="w-100 h-75"><img class="w-100 h-100x" src="./assets/images/bg/details2.png" alt=""></div>
           </div>
@@ -79,14 +84,14 @@
 
         <div class="details-desc col-md-6 px-5">
           <div class="car-name mb-5">
-            <h2 class="card-title-personalisation mb-0">
+            <h2 class="card-title-personalisation mb-0 fs-1 fw-bold">
               Nissan GT-R
             </h2>
-            <img class="h-auto" src="./assets/images/booking/starts.png" alt="">
+            <img class="h-auto" src="" alt="">
             <span class="light-gray reviews mx-2">+440 reviewer</span>
           </div>
           <div class="desc-text lh-lg">
-            <p class="primary-gray">NISMO has become the embodiment of Nissan's outstanding performance, inspired by the most unforgiving proving ground, the "race track"
+            <p class="primary-gray ">NISMO has become the embodiment of Nissan's outstanding performance, inspired by the most unforgiving proving ground, the "race track"
               Lorem ipsum dolor, sit amet consectetur adipisicing elit. Laborum, doloremque commodi totam architecto voluptatem .</p>
           </div>
           <div class="car-features row lh-lg">
@@ -95,21 +100,21 @@
               <strong class="car-categorey">Sport</strong>
             </div>
             <div class="feature-item col-6">
-              <span class="light-gray me-5">Capacity</span>
-              <strong>2 preson</strong>
+              <span class="light-gray me-5">Audio System</span>
+              <strong id="Audiosystem">Dolby</strong>
             </div>
             <div class="feature-item col-6">
               <span class="light-gray me-5">Steering</span>
-              <strong>Manual</strong>
+              <strong id="manuelorelectric">Manuel</strong>
             </div>
             <div class="feature-item col-6">
-              <span class="light-gray me-5">Gazoline</span>
-              <strong>70L</strong>
+              <span class="light-gray me-5">Station</span>
+              <strong id="Stationsystem">CD</strong>
             </div>
           </div>
           <div class="pricing mt-5 d-flex align-items-baseline justify-content-between">
-            <strong class="pricePersonalisation">80.00 DH/days</strong>
-            <a href="./devis.html" class="button button-inverted">Rent Now</a>
+            <strong class="pricePersonalisation fw-bold fs-3" style="color: red;">80.00 DH/days</strong>
+            <a href="./devis.html" class="button button-inverted text-center text-decoration-none">Rent Now</a>
           </div>
         </div>
       </div>
@@ -117,36 +122,33 @@
     <section class="customize-section py-5 px-3  w-100 d-flex justify-content-evenly flex-md-column flex-xl-row flex-column me-lg-0 me-md-1 me-4 gap-3 ">
       <div class="card customize-card p-5 mx-auto w-100 " >
         <div class="customize-item py-3">
-          <label class="mb-3" for="Toit">Toit</label>
-          <select class="form-select" aria-label="Default select ">
-            <option selected>Panoramic</option>
-            <option value="1">Electric</option>
-            <option value="2">Manual</option>
+          <label class="mb-3" for="Toit">Steering</label>
+          <select class="form-select" aria-label="Default select" id="Steering">
+            <option value="Manual">Manual</option>
+            <option value="Electric">Electric</option>
           </select>
         </div>
         <div class="customize-item py-3">
-          <label class="mb-3" for="Toit">High end audio system</label>
-          <select class="form-select" aria-label="Default select ">
-            <option selected>Dolby</option>
-            <option value="1">Atmos</option>
-            <option value="2">Atmos</option>
+          <label class="mb-3" for="Toit">Audio System</label>
+          <select class="form-select" aria-label="Default select " id="audio">
+            <option selected value="Dolby">Dolby</option>
+            <option value="Atomos">Atmos</option>
           </select>
         </div>
         <div class="customize-item py-3">
           <label class="mb-3" for="Toit">Station</label>
-          <select class="form-select" aria-label="Default select ">
-            <option selected>CD</option>
-            <option value="1">Radio</option>
-            <option value="2">Tactile</option>
+          <select class="form-select" aria-label="Default select " id="Station">
+            <option selected value="CD">CD</option>
+            <option value="Radio">Radio</option>
+            <option value="Tactile">Tactile</option>
           </select>
         </div>
         <div class="buttons-section  d-flex gap-2 ">
-          <button class="button-rest">Reset</button>
-          <button class="button-save">Save</button>
+          <button class="button-save w-100" id="saveButton" onclick="handlesoptions()">Save</button>
         </div>
       </div>
-      <div class="car-ss   ">
-        <img src="./assets/images/bg/details4.png" class="image-car" alt="">
+    <div class="car-ss main-img w-50">
+        <img src="./assets/images/bg/details4.png" class="image-car w-100" alt="">
       </div>
     </section>
   </main>
@@ -214,7 +216,7 @@
   
   <script src="cardata.js"></script>
   <script src="filter.js"></script>
-<script src="customize.js"></script>
+  <script src="customize.js"></script>
 </body>
 
 </html>
